--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,6 @@
- [tool.black]
- target-version = ['py38']
+[build-system]
+requires = ["setuptools >= 40.6.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.black]
+target-version = ['py38']
