Run tests with tox, update pre-commit
Use my standard compiled grid of requirements, run the tests for each Python/Django combination with tox, and update pre-commit to use local versions of packages where suitable (a bit faster, easier to run under tox).

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ license_file = LICENSE
 [options]
 package_dir=
     =src
-py_modules = apig_wsgi
+packages = find:
 include_package_data = True
 install_requires =
     Django>=2.2
@@ -38,3 +38,8 @@ zip_safe = False
 
 [options.packages.find]
 where = src
+
+[flake8]
+max-line-length = 80
+select = C,E,F,W,B,B950
+ignore = E501,W503
