--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,35 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
-default_language_version:
-    python: python3.8
-default_stages: [commit]
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
-    hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
-    rev: 19.10b0
-    hooks:
-    -   id: black
--   repo: https://gitlab.com/PyCQA/flake8
-    rev: 3.7.9
-    hooks:
-    -   id: flake8
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v3.2.0
+  hooks:
+  - id: check-added-large-files
+  - id: check-case-conflict
+  - id: check-json
+  - id: check-merge-conflict
+  - id: check-symlinks
+  - id: check-toml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: local
+  hooks:
+  - id: black
+    name: black
+    entry: .tox/py38-codestyle/bin/black
+    language: system
+    types: [python]
+  - id: check-manifest
+    name: check-manifest
+    entry: check-manifest
+    language: system
+    pass_filenames: false
+    files: ^MANIFEST\.in$
+  - id: flake8
+    name: flake8
+    entry: .tox/py38-codestyle/bin/flake8 --config=setup.cfg
+    language: system
+    types: [python]
+  - id: isort
+    name: isort
+    entry: .tox/py38-codestyle/bin/isort
+    language: system
+    types: [python]
