--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
-addopts = --durations=20 -ra --cov . --cov-report=term-missing:skip-covered --no-cov-on-fail --cov-fail-under=100
+addopts =
+    --durations=20
+    -ra
+    --cov auto_prefetch
+    --cov-report=term-missing:skip-covered
+    --no-cov-on-fail
+    --cov-fail-under=100
