Convert README to reStructuredText
* Convert to the “standard”.
* Add badges.
* Improve installation instructions a bit.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 name = django-auto-prefetch
 version = 0.0.6
 description = Automatically prefetch foreign key values as needed.
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 author = Gordon Wrigley
 author_email = gordon.wrigley@gmail.com
 url = https://github.com/tolomea/django-auto-prefetch
