Move test settings to settings file
Puts them in a more expceted place.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,9 @@
 addopts =
     --durations=20
     -ra
+    --ds=tests.settings
     --cov auto_prefetch
     --cov-report=term-missing:skip-covered
     --no-cov-on-fail
     --cov-fail-under=100
+django_find_project = false
