--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ long_description_content_type = text/x-rst
 author = Gordon Wrigley
 author_email = gordon.wrigley@gmail.com
 url = https://github.com/tolomea/django-auto-prefetch
+project_urls =
+    Changelog = https://github.com/tolomea/django-auto-prefetch/blob/master/HISTORY.rst
 license = BSD License
 classifiers =
     Development Status :: 5 - Production/Stable
