Combine config files
* Move coverage config into setup.cfg
* Remove now ignored flake8 config file, as setup.cfg configures it
* Make pytest `--cov` option cover tests too
* Tweak flake8 config to match black recommendations

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ addopts =
     -ra
     --ds=tests.settings
     --cov auto_prefetch
+    --cov tests
     --cov-report=term-missing:skip-covered
     --no-cov-on-fail
     --cov-fail-under=100
