--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,18 @@ zip_safe = False
 [options.packages.find]
 where = src
 
+[coverage:run]
+branch = True
+
+[coverage:paths]
+source =
+   src
+   .tox/*/site-packages
+
+[coverage:report]
+show_missing = True
+
 [flake8]
 max-line-length = 80
 select = C,E,F,W,B,B950
-ignore = E501,W503
+ignore = E203,E501,W503
