--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ deps = -rrequirements/py38-django31.txt
 deps = -rrequirements/py39-django31.txt
 
 [testenv:py39-codestyle]
-deps = -rrequirements/py39.txt
+deps = -rrequirements/py39-django31.txt
 commands =
     pre-commit run --all-files
     twine check .tox/dist/*
