--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,12 @@ deps = -rrequirements/py38-django30.txt
 [testenv:py38-django31]
 deps = -rrequirements/py38-django31.txt
 
+[testenv:py39-django22]
+deps = -rrequirements/py39-django22.txt
+
+[testenv:py39-django30]
+deps = -rrequirements/py39-django30.txt
+
 [testenv:py39-django31]
 deps = -rrequirements/py39-django31.txt
 
