--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,18 @@ warn_unused_ignores = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 allow_untyped_defs = true
+
+[tool.pytest.ini_options]
+addopts = """\
+    --strict-config
+    --strict-markers
+    --durations=20
+    -ra
+    --ds=tests.settings
+    --cov auto_prefetch
+    --cov tests
+    --cov-report=term-missing:skip-covered
+    --no-cov-on-fail
+    --cov-fail-under=100
+    """
+django_find_project = false
