Run tests with Python Development Mode on

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ envlist =
 
 [testenv]
 commands = python -W error::DeprecationWarning -W error::PendingDeprecationWarning -m pytest {posargs}
+setenv =
+    PYTHONDEVMODE=1
 
 [testenv:py36-django22]
 deps = -rrequirements/py36-django22.txt
