Measure coverage of tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,9 @@ where = src
 
 [coverage:run]
 branch = True
-source = auto_prefetch
+source =
+    auto_prefetch
+    tests
 
 [coverage:paths]
 source =
