--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,12 @@ envlist =
     py310-django{32,40}
 
 [testenv]
-commands = python -W error::DeprecationWarning -W error::PendingDeprecationWarning -m pytest {posargs}
+commands =
+  python \
+    -W error::ResourceWarning \
+    -W error::DeprecationWarning \
+    -W error::PendingDeprecationWarning \
+    -m pytest {posargs:tests}
 deps = -r requirements/{envname}.txt
 setenv =
     PYTHONDEVMODE=1
