--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,15 +82,10 @@ enable_error_code = [
   "redundant-expr",
   "truthy-bool",
 ]
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
 mypy_path = "src/"
 namespace_packages = false
-no_implicit_optional = true
+strict = true
 warn_unreachable = true
-warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
