Add setup-cfg-fmt to pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,14 @@
 [metadata]
-name = django-auto-prefetch
+name = django_auto_prefetch
 version = 1.4.0
 description = Automatically prefetch foreign key values as needed.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
+url = https://github.com/tolomea/django-auto-prefetch
 author = Gordon Wrigley
 author_email = gordon.wrigley@gmail.com
-url = https://github.com/tolomea/django-auto-prefetch
-project_urls =
-    Changelog = https://github.com/tolomea/django-auto-prefetch/blob/main/HISTORY.rst
-license = BSD License
+license = BSD-3-Clause
+license_file = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable
     Framework :: Django :: 3.2
@@ -19,23 +18,26 @@ classifiers =
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: Implementation :: CPython
     Typing :: Typed
+project_urls =
+    Changelog = https://github.com/tolomea/django-auto-prefetch/blob/main/HISTORY.rst
 
 [options]
-package_dir=
-    =src
 packages = find:
-include_package_data = True
 install_requires =
     Django>=3.2
 python_requires = >=3.7
+include_package_data = True
+package_dir =
+    =src
 zip_safe = False
 
 [options.packages.find]
@@ -49,8 +51,8 @@ source =
 
 [coverage:paths]
 source =
-   src
-   .tox/**/site-packages
+    src
+    .tox/**/site-packages
 
 [coverage:report]
 show_missing = True
