Add rstcheck pre-commit hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ warn_unused_ignores = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 allow_untyped_defs = true
+
+[tool.rstcheck]
+report_level = "ERROR"
