Use isort to sort imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,13 @@ Repository = "https://github.com/tolomea/django-auto-prefetch"
 [tool.black]
 target-version = ['py38']
 
+[tool.isort]
+add_imports = [
+    "from __future__ import annotations"
+]
+force_single_line = true
+profile = "black"
+
 [tool.pytest.ini_options]
 addopts = """\
     --strict-config
