--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
       -W error::ResourceWarning \
       -W error::DeprecationWarning \
       -W error::PendingDeprecationWarning \
+      -m coverage run \
       -m pytest {posargs:tests}
 
 [flake8]
